# exam66

./: .gitattributes  .gitignore  LICENSE-MIT  Makefile  README.rst  manage.py  pyproject.toml
exam66/: asgi.py  settings.py  urls.py  wsgi.py
examination/: admin.py  apps.py  forms.py  models.py  urls.py  utils.py  views.py
examination/fixtures/: data.json  test_db_dump.json
examination/management/commands/: createexams.py  createuser.py
examination/migrations/: 0001_initial.py  0001_squashed_0010_remove_multichoicequestion_module_or_chapter_and_more.py  0002_chaptergroup_issuedexam_licencecategory_and_more.py  0002_rename_categories_category_and_more.py  0003_rename_mudule_essayquestion_module_and_more.py  0003_selectedquestion_rename_group_name_chaptergroup_name_and_more.py  0004_alter_essayquestion_saving_time_and_more.py  0004_essayanswer_category_delete_essayanstocategory.py  0005_remove_multichoicequestion_alt_answer3.py  0005_remove_selectedquestion_it_must_refer_to_an_essay_question_exclusive_or_a_multichoice_question_and_m.py  0005_rename_question_id_essayanswer_question_and_more.py  0006_alter_essayquestion_level_and_more.py  0006_remove_selectedquestion_alt_answer3.py  0006_selectedquestion_refer_to_an_essay_question_xor_a_multichoice_question.py  0007_alter_essayquestion_level_and_more.py  0008_alter_multichoicequestion_options.py  0009_multichoicequestion_module_or_chapter.py  0010_remove_multichoicequestion_module_or_chapter_and_more.py
examination/templates/examination/: detail_mcquest.html  form.html  home.html  ls_mcquest.html  (+5 more)
examination/tests/: conftest.py  test_command.py  test_models.py  test_views.py
static/: style.css
templates/: base.html
(+6 files in other folders)
