[tool.poetry]
name = "exam66"
version = "0.1.0"
description = "Django app for managing examination questions."
authors = ["Giancarlo Ossino <gcossino@gmail.com>"]
license = "MIT License"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.2.5"
psycopg2-binary = "^2.9.7"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
pytest = "^7.4.2"
pytest-django = "^4.5.2"
pytest-cov = "^4.1.0"
ruff = "^0.0.291"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "exam66.settings"
python_files = ["examination/tests/test_*.py"]
