[project]
name = "exam66"
version = "0.1.0"
description = "Django app for managing examination questions."
authors = ["Giancarlo Ossino <gcossino@gmail.com>"]
license = "MIT License"
readme = "README.rst"
requires-python = ">=3.11"
dependencies = [
    "django>=5.1.4",
    "psycopg2-binary>=2.9.10",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pytest-django>=4.9.0",
    "ruff>=0.9.1",
]
